# Library-Management-System

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/: app.py  book.py  data_structures.py  library.py  recommendation.py  ui.py  user.py  validation.py
tests/: test_core.py
