[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E","F","I","UP","B","C4","PIE","ARG"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = false
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
